--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "user-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "REST API for user management with CRUD operations",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "lint": "echo \"No linting configured yet\"",
+    "build": "echo \"No build step required for Node.js\""
   },
-  "keywords": [],
+  "keywords": ["nodejs", "express", "mongodb", "rest-api", "user-management"],
   "author": "",
   "license": "ISC",
   "dependencies": {
